<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_layer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@android:color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/end_broadcast"
        android:text="@string/end_broadcast"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_end_broadcast"
        android:background="@drawable/end_broadcast_btn"
        android:padding="@dimen/text_padding_end_broadcast"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/top_layer"
        android:elevation="10dp"
        app:cardPreventCornerOverlap="false"
        card_view:cardElevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.bambuser.broadcaster.SurfaceViewWithAutoAR
                android:id="@+id/preview_surface_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile_pic"
                android:layout_width="@dimen/profile_dp"
                android:layout_height="@dimen/profile_dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="@dimen/edge_margin"
                android:src="@drawable/default_profile"
                app:civ_border_width="0dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="0dp"
                app:civ_shadow_color="#3f51b5" />

            <TextView android:id="@+id/name"
                android:text="@string/obit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_gap_top_1"
                android:layout_marginStart="@dimen/profile_gap"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_1"
                tools:ignore="RelativeOverlap" />

            <TextView android:id="@+id/event_type"
                android:text="@string/obit_service_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_gap_top_2"
                android:layout_marginStart="@dimen/profile_gap"
                android:textColor="@drawable/app_green"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_2"
                tools:ignore="RelativeOverlap" />

            <ImageButton android:id="@+id/close_button"
                android:background="@drawable/close_icon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:padding="10dp"
                android:layout_margin="@dimen/edge_margin"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/obit_name" />

            <TextView android:id="@+id/stream_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/stream_info_margin"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_1"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView android:id="@+id/bottom_text_info"
        android:text="@string/cam_text_info1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_marginBottom="@dimen/edge_margin"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_1"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        tools:ignore="RelativeOverlap" />

    <ImageButton android:id="@+id/broadcast_button"
        android:layout_width="@dimen/play_btn"
        android:layout_height="@dimen/play_btn"
        android:elevation="10dp"
        android:layout_marginEnd="@dimen/edge_margin"
        android:layout_marginBottom="@dimen/edge_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@android:string/cancel"/>

    <RelativeLayout
        android:id="@+id/rotate_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/flip_icon_background"
        android:padding="20dp">
        <ImageView
            android:id="@+id/flip_icon"
            android:src="@drawable/flip_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/flip_your_phone" />
        <TextView
            android:text="@string/flip_your_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_below="@id/flip_icon"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/start_camera_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/start_camer_background"
        android:paddingTop="25dp"
        android:paddingBottom="35dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <TextView
            android:id="@+id/start_camera_text"
            android:text="@string/start_camera_text"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black"/>
        <Button
            android:id="@+id/start_camera_button"
            android:text="@string/go_live"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_end_broadcast"
            android:background="@drawable/end_broadcast_btn"
            android:padding="@dimen/text_padding_end_broadcast"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:layout_marginLeft="52dp"
            android:layout_marginRight="52dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_camera_text"/>
    </RelativeLayout>
</RelativeLayout>